...
        
        /// Submit Action
        /// - Parameter sender: UIBUtton Instance
        @IBAction func submitButtonTapped(sender:UIButton)
        {
            if let message = viewModel?.checkFieldsValidation(userName: loginTextField.text!, password: passwordTextField.text!){
                self.presentAlertWithTitle(title: Constant.ErrorTitle, message: message, options: "OK") {_ in
                }
                return
            }
            self.coordinator?.navigateHomeScreen()
            
        }
...
